--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ant Family</title>
+    <title>Ant Family - everything about ant keeping</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="styles.css" />
@@ -31,18 +31,16 @@
   <body>
     <div class="background-image" background="images/ant2.png">
       <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1">Lieke van der Made</span>
+        <span class="navbar-brand mb-0 h1 px-3">Lieke van der Made</span>
       </nav>
       <h1 class="header text-center">my ants and I</h1>
       <h2 class="text-center">one happy family</h2>
       <div class="d-grid gap-2 d-md-flex justify-content-center mt-5">
-        <button
-          type="button"
-          class="btn btn-outline-light btn-lg"
-          href="mailto:ants@antworld.ant"
-        >
-          Let's connect
-        </button>
+        <a href="mailto:ants@antworld.ant"
+          ><button type="button" class="btn btn-outline-light btn-lg">
+            Let's connect
+          </button>
+        </a>
       </div>
     </div>
     <br />
@@ -53,7 +51,11 @@
         <span>ANT KEEPING.</span> For some it's a hobby, for others it's a
         horror, but one thing is certain. We all deal with it. On this webpage
         you can learn everyting you need to know about ant keeping: the care and
-        observation of ants and ant colonies. Ready to capture yours?
+        observation of ants and ant colonies. Ants are interesting and fun
+        insects to keep as pets. Setting up an ant colony enclosure, called a
+        formicarium, can be challenging but is certainly worth the effort for
+        insect enthusiasts! However, it is a big responibility. Read more about
+        ant farming on this website. Ready to capture yours?
       </p>
       <div class="container-video">
         <iframe
@@ -74,38 +76,38 @@
       <div class="row m-5">
         <div class="col-xl-6">
           <p class="text-center">
-            A formicarium or ant farm is a vivarium which is designed primarily
-            for the study of ant colonies and how ants behave. Those who study
-            ant behavior are known as myrmecologists. The formicarium was
-            invented by Charles Janet, a French entomologist and polymath, who
-            had the idea of reducing the three dimensions of an ant nest to the
-            virtual two dimensions between two panes of glass.[1] His design was
-            exhibited in the Exposition Universelle (1900) in Paris. Janet's
-            invention was recognized by his promotion to Chevalier (Knight) of
-            the Legion of Honour, but he did not obtain a patent for, nor
-            attempt to market his creation. The first commercially sold
-            formicarium was introduced around 1929 by Frank Eugene Austin
-            (1873–1964[2]), an inventor and professor at the Thayer School of
-            Engineering at Dartmouth College.[3][4] Austin received a patent for
-            his formicarium on June 16, 1931,[5][6] as well as further patents
-            for its continued development.[7][8] Austin included whimsical
-            painted or wooden scenes of palaces, farms and other settings above
-            the ground level. In 1956, Milton Levine, founder of Uncle Milton
-            Industries, created his own version of a formicarium, reportedly
-            independently from Frank Austin. Levine got the idea when attending
-            a Fourth of July picnic.[9][10] Levine registered the term ant farm
-            for his product and registered it as a trademark.[11] Austin may not
-            have used this term; in his patents, the formicarium is referred to
-            as an "educational apparatus" and "scenic insect cage", and in the
-            1936 magazine article about Austin's device, the structure is called
-            an "ant palace". Levine’s “Ant Farm” trademark received notoriety in
-            1995 when Scott Adams used the phrase in a Dilbert comic and
-            received threatening letters from Uncle Milton Industries'
-            attorneys, demanding a retraction for the unauthorized use of the
-            phrase. Adams satirized the incident in a later comic strip, in
-            which Dilbert asked for a substitute phrase for "a habitat for
-            worthless and disgusting little creatures", to which Dogbert replied
-            "law school".[12][13] <br />
+            FORMICARIUM. A formicarium or ant farm is a vivarium which is
+            designed primarily for the study of ant colonies and how ants
+            behave. Those who study ant behavior are known as myrmecologists.
+            The formicarium was invented by Charles Janet, a French entomologist
+            and polymath, who had the idea of reducing the three dimensions of
+            an ant nest to the virtual two dimensions between two panes of
+            glass.[1] His design was exhibited in the Exposition Universelle
+            (1900) in Paris. Janet's invention was recognized by his promotion
+            to Chevalier (Knight) of the Legion of Honour, but he did not obtain
+            a patent for, nor attempt to market his creation. The first
+            commercially sold formicarium was introduced around 1929 by Frank
+            Eugene Austin (1873–1964[2]), an inventor and professor at the
+            Thayer School of Engineering at Dartmouth College.[3][4] Austin
+            received a patent for his formicarium on June 16, 1931,[5][6] as
+            well as further patents for its continued development.[7][8] Austin
+            included whimsical painted or wooden scenes of palaces, farms and
+            other settings above the ground level. In 1956, Milton Levine,
+            founder of Uncle Milton Industries, created his own version of a
+            formicarium, reportedly independently from Frank Austin. Levine got
+            the idea when attending a Fourth of July picnic.[9][10] Levine
+            registered the term ant farm for his product and registered it as a
+            trademark.[11] Austin may not have used this term; in his patents,
+            the formicarium is referred to as an "educational apparatus" and
+            "scenic insect cage", and in the 1936 magazine article about
+            Austin's device, the structure is called an "ant palace". Levine’s
+            “Ant Farm” trademark received notoriety in 1995 when Scott Adams
+            used the phrase in a Dilbert comic and received threatening letters
+            from Uncle Milton Industries' attorneys, demanding a retraction for
+            the unauthorized use of the phrase. Adams satirized the incident in
+            a later comic strip, in which Dilbert asked for a substitute phrase
+            for "a habitat for worthless and disgusting little creatures", to
+            which Dogbert replied "law school".[12][13] <br />
             <br />
             Read more on
             <a href="https://en.wikipedia.org/wiki/Formicarium"> Wikipedia</a>
@@ -119,10 +121,55 @@
           />
         </div>
       </div>
+
+      <h3 class="text-center mt-5">Ant lovers</h3>
+      <h4 class="text-center">Want an ant? Get connected!</h4>
+      <p class="text-center m-3">
+        THE RISE OF ANTKEEPING. Active online communities share information and
+        debate fine points from the best ant diets to the secrets for lulling
+        colonies into hibernation. Some hobbyists are meticulously documenting
+        rare ants' life cycles and making fascinating observations of
+        understudied species. Now, scientists are starting to pay attention too,
+        and taking advantage of hobbyists’ expertise.
+      </p>
+      <div class="d-grid gap-2 d-md-flex justify-content-center m-5">
+        <a
+          href="https://www.facebook.com/groups/1150292118324803/"
+          target="_blank"
+          ><button type="button" class="btn btn-outline-light btn-lg">
+            The community
+          </button>
+        </a>
+      </div>
+      <div>
+        <img
+          class="img-fluid rounded m-5"
+          src="images/ant3.jpeg"
+          alt="Ant Macro"
+        />
+
+        <h3 class="text-center mt-5">Get started</h3>
+        <h4 class="text-center">All the ant gear you need</h4>
+        <p class="text-center mt-3">
+          ANT STARTER PACKS! AntKeepers is the place to shop your formicariums,
+          ant food and learn everything you need about keeping ants as a pet.
+          There are many different formicariums for keeping ants. Actually, most
+          things that can be kept moist and escape-proof is probably usable.
+          Have a look at our the AntKeepers and try building one yourself!
+        </p>
+        <div class="d-grid gap-2 d-md-flex justify-content-center m-5">
+          <a href="https://www.antkeepers.com/" target="_blank"
+            ><button type="button" class="btn btn-outline-light btn-lg">
+              Get started
+            </button>
+          </a>
+        </div>
+      </div>
     </div>
+
     <footer class="text-center p-2">
       © 2022
-      <a href="https://github.com/LiekeM"
+      <a href="https://github.com/LiekeM" target="_blank"
         >open source code by: Lieke van der Made</a
       >
       <div class="">
