Updated paragraph text HTML

--- a/index.html
+++ b/index.html
@@ -27,9 +27,104 @@
       src="https://kit.fontawesome.com/03cb5f7d1c.js"
       crossorigin="anonymous"
     ></script>
+    <style>
+      @media (max-width: 576px) {
+        .header {
+          font-size: 50px !important;
+          margin-top: 50px !important;
+        }
+        h2 {
+          font-size: 18px !important;
+        }
+        h3 {
+          font-size: 30px !important;
+        }
+      }
+
+      body {
+        background-color: black !important;
+      }
+
+      h1 {
+        font-family: "Paytone One", sans-serif;
+        color: whitesmoke;
+        font-size: 96px !important;
+        margin-top: 150px !important;
+      }
+
+      h2 {
+        color: whitesmoke;
+      }
+
+      h3 {
+        font-family: "Paytone One", sans-serif;
+        color: aliceblue;
+        font-size: 50px !important;
+      }
+
+      h4 {
+        color: whitesmoke;
+      }
+
+      p {
+        color: whitesmoke;
+      }
+
+      img {
+        height: 500px;
+        width: auto;
+      }
+
+      footer {
+        margin-top: 120px;
+        color: whitesmoke;
+        background-color: #223601;
+      }
+
+      btn {
+        color: whitesmoke;
+      }
+
+      a {
+        color: whitesmoke;
+      }
+
+      a:visited {
+        color: whitesmoke;
+      }
+
+      .background-image {
+        background-image: url("images/ant1.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: auto;
+        height: 900px;
+        background-size: 100%;
+      }
+
+      .container-video {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        padding-top: 56.25%;
+      }
+
+      .responsive-iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
-    <div class="background-image" background="images/ant2.png">
+    <div
+      class="background-image"
+      background="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/059/794/original/ant1-copy.jpg?1671550226"
+    >
       <nav class="navbar navbar-dark bg-dark">
         <span class="navbar-brand mb-0 h1 px-3">Lieke van der Made</span>
       </nav>
@@ -76,47 +171,26 @@
       <div class="row m-5">
         <div class="col-xl-6">
           <p class="text-center">
-            FORMICARIUM. A formicarium or ant farm is a vivarium which is
-            designed primarily for the study of ant colonies and how ants
-            behave. Those who study ant behavior are known as myrmecologists.
-            The formicarium was invented by Charles Janet, a French entomologist
-            and polymath, who had the idea of reducing the three dimensions of
-            an ant nest to the virtual two dimensions between two panes of
-            glass.[1] His design was exhibited in the Exposition Universelle
-            (1900) in Paris. Janet's invention was recognized by his promotion
-            to Chevalier (Knight) of the Legion of Honour, but he did not obtain
-            a patent for, nor attempt to market his creation. The first
-            commercially sold formicarium was introduced around 1929 by Frank
-            Eugene Austin (1873–1964[2]), an inventor and professor at the
-            Thayer School of Engineering at Dartmouth College.[3][4] Austin
-            received a patent for his formicarium on June 16, 1931,[5][6] as
-            well as further patents for its continued development.[7][8] Austin
-            included whimsical painted or wooden scenes of palaces, farms and
-            other settings above the ground level. In 1956, Milton Levine,
-            founder of Uncle Milton Industries, created his own version of a
-            formicarium, reportedly independently from Frank Austin. Levine got
-            the idea when attending a Fourth of July picnic.[9][10] Levine
-            registered the term ant farm for his product and registered it as a
-            trademark.[11] Austin may not have used this term; in his patents,
-            the formicarium is referred to as an "educational apparatus" and
-            "scenic insect cage", and in the 1936 magazine article about
-            Austin's device, the structure is called an "ant palace". Levine’s
-            “Ant Farm” trademark received notoriety in 1995 when Scott Adams
-            used the phrase in a Dilbert comic and received threatening letters
-            from Uncle Milton Industries' attorneys, demanding a retraction for
-            the unauthorized use of the phrase. Adams satirized the incident in
-            a later comic strip, in which Dilbert asked for a substitute phrase
-            for "a habitat for worthless and disgusting little creatures", to
-            which Dogbert replied "law school".[12][13] <br />
+            FORMICARIUM. A formicarium, also known as an ant farm, is a special
+            type of vivarium designed for the study of ant colonies and their
+            behavior. It is typically made of a clear, flat surface, such as
+            glass or acrylic, with a layer of soil or sand for the ants to build
+            their nest in. Formicaria can be used to observe and research the
+            social behaviors and interactions of different ant species, as well
+            as the formation and maintenance of their nests and colonies.
+            Myrmecologists, scientists who study ants, often use formicaria in
+            their research. The formicarium was invented by Charles Janet, a
+            French entomologist, and has been used for educational and research
+            purposes since its introduction in the early 20th century. <br />
             <br />
-            Read more on
+            Read more about formicaria on
             <a href="https://en.wikipedia.org/wiki/Formicarium"> Wikipedia</a>
           </p>
         </div>
         <div class="col-xl-6">
           <img
             class="img-fluid rounded mx-auto"
-            src="images/ant-miners.png"
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/059/792/original/ant-miners.png?1671549951"
             alt="Ant Miners"
           />
         </div>
@@ -144,7 +218,7 @@
       <div>
         <img
           class="img-fluid rounded m-5"
-          src="images/ant3.jpeg"
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/059/793/original/ant3.jpeg?1671550074"
           alt="Ant Macro"
         />
 
